<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/titleMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/title"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="1dp" />


            <ImageView
                android:id="@+id/imageDetail"
                android:layout_width="152dp"
                android:layout_height="160dp"
                android:layout_alignParentStart="true"
                android:gravity="center_horizontal"
                android:paddingTop="20dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="85dp" />

            <TextView
                android:id="@+id/yearId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2015"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="258dp"
                tools:layout_editor_absoluteY="85dp" />

            <TextView
                android:id="@+id/runtimeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/yearId"
                android:text="@string/_150mins"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="258dp"
                tools:layout_editor_absoluteY="123dp" />

            <TextView
                android:id="@+id/voteAverageId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/runtimeId"
                android:text="@string/_10_8_9"
                android:textColor="#000000"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="258dp"
                tools:layout_editor_absoluteY="162dp" />

            <Button
                android:id="@+id/markAsFavoriteId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark_as_favorite"
                tools:layout_editor_absoluteX="215dp"
                tools:layout_editor_absoluteY="197dp" />


            <TextView
                android:id="@+id/overviewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/xxxxxxxxxxxxxxxxxxxxxxdaslhjfha_jkbakfjabfjdbfkdjfbdkjfbdkfbdkfabfkhbvddffsdbdsakdaskjdb_dsahdjndjfndndndndfndlfndljnfdjfndsjfndvndsjvnjdnvsdj"
                android:textColor="#000000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:layout_editor_absoluteY="657dp"
                app:layout_constraintHorizontal_bias="1.0" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>